<resources>
    <string name="app_name">SimpleTS</string>
    <!--       -->
    <string name="help">Show help</string>
    <string name="help_content">
        For add the new channel from Thingspeak site you must tap on menu and choose \"Add channel \" item.
        \nAfter it be show the screen for add channel. Simple go on.</string>
    <!--  channels  -->
    <string name="channel_id_label" translatable="false">"  ID: "</string>
    <string name="channels">Channels</string>
    <string name="add_channel">Add channel</string>
    <string name="name">"Name: "</string>
    <string name="channel_fields_header">Bottom show fields for this channel</string>
    <string name="channel_edit_butt_text">Edit</string>
    <string name="channel_del_butt_text">Delete</string>
    <string name="channel_show_butt_text">Show</string>
    <string name="set_channel_name">channel name</string>
    <string name="set_channel_hint">Set channel name</string>
    <string name="enter_channel_id">Enter channel Id</string>
    <string name="channel_props_label">Settings for channel %1$s</string>
    <string name="api_key_label">Thingspeak read API KEY(not required)</string>
    <string name="connect_proto_label">Connect protocol</string>
    <string-array name="protos">
        <item>http</item>
        <item>https</item>
    </string-array>
    <!--  field  -->
    <string name="field_name_hint">set name</string>
    <string name="field_measure_label">MeasureUnit</string>
    <!--   label  -->
    <string name="is_show_label">whether show</string>
    <string name="ok_label" translatable="false">OK</string>
    <string name="no_label">NO</string>
    <string name="cancel_label">CANCEL</string>
    <!-- misk  -->
    <string name="must_digit">only digits allowed</string>
    <string name="fail_write_mess">"Fail save value "</string>
    <string name="save_it">Save it ?</string>

    <!--    quest message -->
    <string name="quest_mess_header" translatable="false">@string/is_show_label<br />
        <big>Id: <u>%1$d</u>  @string/name<u>%2$s</u></big>
    </string>
    <string name="quest_mess_item" translatable="false">
        <![CDATA[
        <h3 align=\"center\" color=\"#4080ff\"> %1$s </h3>
        <div color=\"#10a890\">
            ]]>@/string/name<![CDATA[ :  %2$s <br>
            ]]>@/string/field_measure_label<![CDATA[ : %3$s <br>
            ]]>@string/is_show_label<![CDATA[ - %4$s <br>
        </div>
        ]]>
    </string>

    <!--  app  titles  -->
    <string name="channels_fragment_title">SimpleTS : Channels list</string>
    <string name="props_fragment_title">Tune channel %1$s</string>
    <string name="fields_fragment_title">Show channel : %1$s</string>
    <string name="help_fragment_title">SimpleTS : Help</string>
    <string name="chart_fragment_title">Channel %1$s</string>


    <!--   for test -->
    <string name="dummy" translatable="false"><i>Dummy Text@string/name</i></string>
    <!--   confirm mess -->
    <string name="delete_channel_confirm_message">You want delete channel %1$s</string>
    <string name="save_channel_confirm">Save channel ?</string>
    <string name="on_delete_channel_confirm">You want delete channel %1$s</string>
    <!--  connect wrongs  -->
    <string name="wrong_networking_message">Can`t get data from Thingspeak check Network and retry.</string>
    <string name="wrong_request_to_thingspeak">bad channel Id . Check channel parameters and retry.</string>
    <string name="wrong_data_format">Can`t parse data from server. \\nCheck channel parameters</string>
    <string name="wrong_get_data_header">Error on get data</string>
    <string name="delete_channel_header">On delete channel</string>
    <!--  quit  -->
    <string name="exit">Quit</string>
    <!--  autoupdate values -->
    <string name="frequency_duration">Request frequency(sec)</string>
    <string name="wrong_watch">For channel cannot set frequency duration. Go to channels screen and set Request Frequency</string>
    <string name="warning">Warning!</string>
    <string name="stop_watch">Stop watch</string>
    <string name="start_watch">Success start watch for channel</string>
    <!--   widget  -->
    <string name="configure">Configure</string>
    <string name="widget_button_configure">conf</string>
    <string name="widget_button_app">go_app</string>
    <string name="wrong_api_key">Thingspeak read API KEY have lenght 16 symbols you set \"%1$s\" symbols</string>
    <string name="add_api_key_hint">Fill for private channel</string>
    <string name="add_dialog_key_label" translatable="false">API KEY</string>
    <string name="choose_channel">Choose channel</string>
    <string name="choose_field">Choose field</string>
    <string name="conf_notify_label">Enter value for notify</string>
    <string name="max_val" translatable="false">max</string>
    <string name="min_val" translatable="false">min</string>
    <string name="conf_update_time">update time(minutes)</string>
    <string name="conf_font_size">Font size</string>
    <string name="conf_color_choose">Choose background color</string>
    <string name="apply_widget">To apply</string>
    <string name="max_value_alarm">"Max value exceeded! "</string>
    <string name="min_value_alarm">"Value below minimum! "</string>
    <string name="value_have">have value</string>
    <string name="notify_channel_name" translatable="false">channelOutOfBoundsNotify</string>
    <string name="channel_description" translatable="false">notification channel</string>
    <!--   chart  -->
    <string-array name="hour_counts">
        <item>1</item>
        <item>2</item>
        <item>6</item>
        <item>12</item>
    </string-array>
    <string-array name="day_counts">
        <item>1</item>
        <item>3</item>
        <item>10</item>
        <item>30</item>
    </string-array>
    <string name="chart_choose_dialog_label">Choose channel and field</string>
    <string name="chart_hour_label_text">Hours</string>
    <string name="chart_days_label_text">Days</string>
    <string name="chart_name_label">Chart for %1$s</string>
    <string name="chart_choose_button_text">Period</string>
    <string name="show_chart">Show chart</string>
    <string name="chart_drop_null">null values discarded</string>
    <!--  dialog choose period -->
    <string name="dialog_chooser_title">Choose watch period</string>
    <string name="long_period">Sorry. Period too long.</string>
    <string name="start_great_end">WARN :  End date must be great than start date</string>
    <string name="empty_date">Empty data - nothing show</string>
    <string name="chooser_end_date_button_text">End</string>
    <string name="chooser_start_date_button_text">Start</string>
    <string name="choose_wrong_date">Choose wrong date value</string>
    <string name="chart_on_empty_mess">Get empty data. May be choosed wrong interval.</string>
    <string name="wrong_on_null">Gotten values contains \\\"null\\\". It dropped.</string>
</resources>