<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="2dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/channel_id_label"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintBottom_toBottomOf="@id/channel_id_value"
        app:layout_constraintEnd_toStartOf="@+id/channel_id_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/channel_id_value" />

    <EditText
        android:id="@+id/channel_id_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/List_margin_top"
        android:autofillHints=""
        android:hint="@string/must_digit"
        android:inputType="number"
        android:paddingStart="1dp"
        android:paddingEnd="2dp"
        android:textSize="@dimen/label_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_ali_key_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/list_margin"
        android:text="@string/add_dialog_key_label"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/add_api_key_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_api_key_value" />

    <EditText
        android:id="@+id/add_api_key_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/List_margin_top"
        android:autofillHints="@string/add_api_key_hint"
        android:hint="@string/add_api_key_hint"
        android:inputType="text"
        android:textSize="@dimen/label_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_ali_key_label"
        app:layout_constraintTop_toBottomOf="@id/channel_id_value" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_label"
        app:layout_constraintBottom_toBottomOf="@+id/button_no"
        app:layout_constraintEnd_toStartOf="@+id/button_no"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_no" />

    <Button
        android:id="@+id/button_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/no_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_ok"
        app:layout_constraintTop_toBottomOf="@id/add_api_key_value"
        app:layout_constraintVertical_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>