<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/list_margin">

    <TextView
        android:id="@+id/dialog_chooser_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/list_margin"
        android:padding="@dimen/list_padding"
        android:text="@string/dialog_chooser_title"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/chart_chooser_start_date_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/list_margin"
        android:text="@string/chooser_start_date_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_chooser_title" />

    <TextView
        android:id="@+id/chart_chooser_start_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/list_margin"
        android:padding="@dimen/small_padding"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/chart_chooser_start_date_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chart_chooser_start_date_button"
        app:layout_constraintTop_toBottomOf="@+id/dialog_chooser_title" />

    <Button
        android:id="@+id/chart_chooser_end_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/list_margin"
        android:text="@string/chooser_end_date_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chart_chooser_start_date_button" />

    <TextView
        android:id="@+id/chart_chooser_end_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/list_margin"
        android:padding="@dimen/small_padding"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chart_chooser_end_date_button"
        app:layout_constraintTop_toBottomOf="@+id/chart_chooser_start_date_button" />


</androidx.constraintlayout.widget.ConstraintLayout>