<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/list_padding">

    <TextView
        android:id="@+id/chart_choose_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/List_margin_top"
        android:paddingBottom="@dimen/list_padding"
        android:text="@string/chart_choose_dialog_label"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chart_channel_spinner_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/List_margin_top"
        android:padding="@dimen/list_margin"
        android:text="@string/choose_channel"
        android:textSize="@dimen/label_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chart_choose_label" />

    <Spinner
        android:id="@+id/chart_choose_channel_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/list_margin"
        android:padding="@dimen/list_margin"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chart_channel_spinner_label"
        app:layout_constraintTop_toTopOf="@+id/chart_channel_spinner_label"
        app:layout_constraintBottom_toBottomOf="@+id/chart_channel_spinner_label" />

    <TextView
        android:id="@+id/chart_choose_field_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/List_margin_top"
        android:padding="@dimen/list_margin"
        android:text="@string/choose_field"
        android:textSize="@dimen/label_text_size"
        app:layout_constraintEnd_toEndOf="@+id/chart_channel_spinner_label"
        app:layout_constraintTop_toBottomOf="@+id/chart_channel_spinner_label" />

    <Spinner
        android:id="@+id/chart_choose_field_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/list_margin"
        android:padding="@dimen/list_margin"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chart_choose_field_label"
        app:layout_constraintTop_toTopOf="@+id/chart_choose_field_label"
        app:layout_constraintBottom_toBottomOf="@+id/chart_choose_field_label" />

</androidx.constraintlayout.widget.ConstraintLayout>